# carrier-technical

./: .gitignore  README.md  config.yaml  pyproject.toml  stock_report.py
.github/workflows/: carrier.yml  main.yml
docker/: build.sh  run.sh
docker/src/: Dockerfile
utils/: get_data.py  judge.py  notify.py  technical_calc.py
